<resources>
    <string name="app_name">Task Timer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="addedit_save">Save</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="menutitle_addTask">Add Task</string>
    <string name="menutitle_showDurations">Durations Report</string>
    <string name="manumain_showAbaut">About TaskTimer</string>
    <string name="menumain_generate">Generate data</string>
    <string name="no_task_message">No Task being timed</string>
    <string name="edit_button_description">Button to edit a tasks detail</string>
    <string name="delete_button_description">Button to delete a task</string>
    <string name="sortorder_hint">Sort order</string>
    <string name="description_hint">Type a description for the New Task (max 256 characters)</string>
    <string name="name_hint">New Task Name</string>

    <string name="instructions_heading">Instructions</string>
    <string name="instructions">Use the add button (+) in the toolbar above to create new tasks.\n\nTasks with lower sort orders will be placed higher up the list. Tasks with the same sort order will be sorted alphabetically.\n\nTapping a task will start the timer for that task (and will stop the timer for any previous task that was being timed).\n\nEach task has an Edit button if you want to change the details. \n\nSwipe a task left to delete it.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="deldiag_positive_caption">Delete</string>
    <string name="deldiag_message">Deleting will also delete all timing data associated with task id %1$d: %2$s.</string>
    <string name="cancelEditDiag_positive_caption">Abandon changes</string>
    <string name="cancelEditDiag_negative_caption">Continue editing</string>
    <string name="cancelEditDiago_message">You have unsaved changes. Do you want to abandon your changes, or continue editing?</string>
    <string name="about_copyright">Copyright © 2021 BManchi</string>
    <string name="about_weblink">https://github.com/BManchi</string>
    <string name="about_email">For support, email tasktimer@bmanchi.com</string>
    <string name="about_credits">Icon derived from <b>analog clock</b> at openclipart.org <b>Anonymus</b></string>
    <string name="timing_message">currently timing %1$s</string>
    <string name="td_text_name">Task Name</string>
    <string name="td_text_date">Date</string>
    <string name="td_text_duration">Duration</string>
    <string name="td_text_description">Description</string>
    <string name="title_activity_durations_report">DurationsReport</string>
    <string name="previous">Previous</string>
    <string name="rm_title_filter_day">Show day</string>
    <string name="rm_title_filter_week">Show week</string>
    <string name="rm_title_filter_date">Set report date</string>
    <string name="rm_title_delete">Delete old timings</string>
    <string name="delete_title_filter">Select date for report</string>
    <string name="date_title_filter">Select date for report</string>
    <string name="date_title_delete">Select the date to delete up to</string>
    <string name="delete_timings_message">Are you sure you want to delete all timings before %1$s?</string>
    <string name="delete_edited_task">You can\'t delete the task that\'s being edited.</string>
</resources>