<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondFragment">

    <EditText
        android:id="@+id/addedit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:hint="@string/name_hint"
        android:inputType="textNoSuggestions"
        android:maxLength="64" />

    <EditText
        android:id="@+id/addedit_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:hint="@string/description_hint"
        android:inputType="textMultiLine"
        android:maxLength="256" />

    <EditText
        android:id="@+id/addedit_sortorder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:hint="@string/sortorder_hint"
        android:inputType="number"
        android:maxLength="9" />

    <Button
        android:id="@+id/addedit_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:drawableStart="@android:drawable/ic_menu_save"
        android:text="@string/addedit_save" />

</LinearLayout>